--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,9 +6,17 @@ services:
     build: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
+
+  backend:
+    container_name: foodgram-backend
+    build: ../backend/
+    env_file: .env
+
   nginx:
     container_name: foodgram-proxy
     image: nginx:1.25.4-alpine
+    depends_on:
+      - backend
     ports:
       - "80:80"
     volumes:
