--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_tokens off;
     client_max_body_size 10M;
 
     location /api/docs/ {
@@ -13,4 +14,13 @@ server {
         try_files $uri /index.html;
       }
 
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8080/api/;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8080/admin/;
+    }
 }
