--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
+    index index.html;
     server_tokens off;
-    client_max_body_size 10M;
+    client_max_body_size 30M;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -23,4 +24,8 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8080/admin/;
     }
+    location /media/ {  
+        alias /media/;
+        try_files $uri $uri/ /index.html; 
+      }
 }
