--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,41 +3,41 @@ name: Main Foodgram workflow
 on: push
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:13.10
-        env:
-          POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: django_password
-          POSTGRES_DB: django_db
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt 
-    - name: Test with flake8 and django tests
-      env:
-        POSTGRES_USER: django_user
-        POSTGRES_PASSWORD: django_password
-        POSTGRES_DB: django_db
-        DB_HOST: 127.0.0.1
-        DB_PORT: 5432
-      run: |
-        python -m flake8 backend/
-        cd backend/
-        python manage.py test
+  # tests:
+  #   runs-on: ubuntu-latest
+  #   services:
+  #     postgres:
+  #       image: postgres:13.10
+  #       env:
+  #         POSTGRES_USER: django_user
+  #         POSTGRES_PASSWORD: django_password
+  #         POSTGRES_DB: django_db
+  #       ports:
+  #         - 5432:5432
+  #       options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - name: Set up Python
+  #     uses: actions/setup-python@v4
+  #     with:
+  #       python-version: 3.9
+  #
+  #   - name: Install dependencies
+  #     run: |
+  #       python -m pip install --upgrade pip 
+  #       pip install flake8==6.0.0 flake8-isort==6.0.0
+  #       pip install -r ./backend/requirements.txt 
+  #   - name: Test with flake8 and django tests
+  #     env:
+  #       POSTGRES_USER: django_user
+  #       POSTGRES_PASSWORD: django_password
+  #       POSTGRES_DB: django_db
+  #       DB_HOST: 127.0.0.1
+  #       DB_PORT: 5432
+  #     run: |
+  #       python -m flake8 backend/
+  #       cd backend/
+  #       python manage.py test
 
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
@@ -72,29 +72,29 @@ jobs:
           # на сервере и в docker-compose.yml не указывать версию
           tags: cryosteam/backend:latest 
 
-  frontend_tests:
-      runs-on: ubuntu-latest
-
-      steps:
-      - uses: actions/checkout@v3
-      - name: Set up nodeJS
-        # Это готовый воркфлоу для установки Node.js на раннер
-        uses: actions/setup-node@v3
-        with:
-          # Это параметр воркфлоу, указывающий нужную версию Node.js
-          node-version: 18
-
-      - name: Install dependencies
-        # Эта команда устанавливает зависимости для фронтенда
-        run: |
-          cd frontend/
-          npm ci
-
-      - name: Test frontend
-        # Запускаем тесты
-        run: |
-          cd frontend/
-          npm run test
+  # frontend_tests:
+  #     runs-on: ubuntu-latest
+  #
+  #     steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set up nodeJS
+  #       # Это готовый воркфлоу для установки Node.js на раннер
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         # Это параметр воркфлоу, указывающий нужную версию Node.js
+  #         node-version: 18
+  #
+  #     - name: Install dependencies
+  #       # Эта команда устанавливает зависимости для фронтенда
+  #       run: |
+  #         cd frontend/
+  #         npm ci
+  #
+  #     - name: Test frontend
+  #       # Запускаем тесты
+  #       run: |
+  #         cd frontend/
+  #         npm run test
 
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
@@ -135,7 +135,7 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./nginx/
+          context: ./infra/
           push: true
           # Тут вместо username должен быть ваш логин на Docker Hub
           tags: cryosteam/gateway:latest
