--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,12 +9,6 @@ server {
         try_files $uri $uri/redoc.html;
     }
     
-    location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-      }
-
     location /api/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8080/api/;
@@ -24,8 +18,14 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8080/admin/;
     }
+
     location /media/ {  
         alias /media/;
         try_files $uri $uri/ /index.html; 
+      }
+
+    location / {
+        alias /static/;
+        try_files $uri $uri/ /index.html;
       }
 }
